--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,25 +2,111 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: rgba(255, 140, 0, 0.2); /* Almost transparent orange */
-    padding: 10px 20px;
+    background: rgba(255, 255, 255, 0.2); 
+    padding: 5px 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    position: absolute;
+    position: absolute; /* Manual Changes */
     width: 100%;
     top: 0;
     right: 0;
     z-index: 1000;
-  }
-  
-  .logo {
-    font-weight: bold;
-    font-size: 1.5rem;
-    color: #333;
-  }
-  
-  .username {
-    font-weight: bold;
-    color: #333;
-  }
+    box-sizing: border-box;
+}
 
-  
+.logo {
+    font-weight: bold;
+    font-size: 1.2rem;
+    color: #333;
+    white-space: nowrap;
+}
+
+.coins-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+}
+
+.coins {
+    width: 100px;
+    height: auto;
+}
+
+.coins-count {
+    position: absolute;
+    top: 52%;
+    left: 65%;
+    transform: translate(-50%, -50%);
+    font-weight: bold;
+    font-size: 1.2rem;
+    color: rgb(255, 200, 3);
+    pointer-events: none;
+}
+
+.back-button {
+    cursor: pointer;
+    transition: opacity 0.3s ease;
+    margin-right: 10px;
+    width: 50px; /* Manual Changes */
+    height: auto;
+}
+
+.back-button:hover {
+    opacity: 0.8;
+}
+
+@media (max-width: 768px) {
+    .navbar {
+        padding: 5px;
+        flex-wrap: nowrap;
+    }
+
+    .logo {
+        font-size: 1rem; 
+        margin: 5px 10px;
+    }
+
+    .coins-container {
+        margin-right: 10px;
+    }
+
+    .coins {
+        width: 80px;
+    }
+
+    .coins-count {
+        font-size: 1rem;
+    }
+
+    .back-button {
+        margin-right: 10px;
+    }
+}
+
+@media (max-width: 480px) {
+    .navbar {
+        padding: 5px;
+        flex-wrap: nowrap;
+    }
+
+    .logo {
+        font-size: 0.9rem;
+        margin: 5px 10px;
+    }
+
+    .coins-container {
+        margin-right: 10px;
+    }
+
+    .coins {
+        width: 60px;
+    }
+
+    .coins-count {
+        font-size: 0.8rem;
+    }
+
+    .back-button {
+        margin-right: 10px;
+    }
+}
