--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -35,7 +35,7 @@
 .coins-count {
     position: absolute;
     top: 52%;
-    left: 65%;
+    left: 82%;
     transform: translate(-50%, -50%);
     font-weight: bold;
     font-size: 1.2rem;
@@ -53,6 +53,23 @@
 
 .back-button:hover {
     opacity: 0.8;
+}
+
+.language-button {
+    background-color: #01dfe3; /* Fluorescent light blue */
+    color: #000; /* Black text */
+    border: 1.5px solid #000; /* Black border */
+    border-radius: 10px;
+    padding: 7px 15px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+    margin-right: 20px; /* Spacing adjustment */
+    font-size: 0.9rem;
+}
+
+.language-button:hover {
+    background-color: #02b5be; /* Slightly darker blue on hover */
+    color: black; /* White text on hover */
 }
 
 @media (max-width: 768px) {
@@ -76,9 +93,16 @@
 
     .coins-count {
         font-size: 1rem;
+        left: 83%;
     }
 
     .back-button {
+        margin-right: 10px;
+    }
+
+    .language-button {
+        padding: 4px 8px;
+        font-size: 0.9rem;
         margin-right: 10px;
     }
 }
@@ -104,9 +128,16 @@
 
     .coins-count {
         font-size: 0.8rem;
+        left: 84%;
     }
 
     .back-button {
+        margin-right: 10px;
+    }
+
+    .language-button {
+        padding: 3px 6px;
+        font-size: 0.8rem;
         margin-right: 10px;
     }
 }
